llvm/dev/methodcall0.llvm.bc.err
/Users/cmk/llvm/bin/llvm-as: llvm/dev/methodcall0.llvm:1:1: error: expected top-level entity
LogError: Unknown function referenced
^
